--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,12 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation "com.squareup.picasso:picasso:2.71828"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha07"
+    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-alpha07"
+    implementation "com.google.code.gson:gson:2.8.2"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha07'
 }
